--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5"> <!-- 设置缩放为200% -->
     <title>合格证</title>
     <style>
         body {
