--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         .content-box {
             display: flex; /* 使用Flexbox布局 */
-            width: 100%; /* 设置宽度为100% */
+            width: 900%; /* 设置宽度为50% */
             height: 100%; /* 设置高度为100% */
             padding: 8px; /* 设置内边距 */
             background-color: #fff; /* 设置背景颜色 */
@@ -55,6 +55,7 @@
         th, td {
             padding: 8px; /* 设置单元格内边距 */
             font-size: 1rem; /* 确保两边文字大小一致 */
+            white-space: nowrap; /* 防止文字换行 */
         }
         th {
             text-align: left; /* 左对齐 */
