--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <table>
                 <tr>
                     <th>姓名</th>
-                    <td>辛峻吉</td>
+                    <td>某某某</td>
                 </tr>
                 <tr>
                     <th>性别</th>
@@ -161,7 +161,7 @@
                 </tr>
                 <tr>
                     <th>所属区县</th>
-                    <td>涪城区</td>
+                    <td>某某区</td>
                 </tr>
             </table>
         </div>
